Fixed some issues and tried new schema viewer

--- a/lib/client/less/index.less
+++ b/lib/client/less/index.less
@@ -1,5 +1,6 @@
 @import '~bootstrap/less/bootstrap.less';
 @import (inline) '~angular-resizable/src/angular-resizable.css';
+@import (inline) '~json-schema-view/dist/json-schema-view.css';
 
 .flex(@a: 0; @b: 1; @c: auto) {
   -webkit-flex: @arguments;
