--- a/lib/client/templates/schema.html
+++ b/lib/client/templates/schema.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="panel panel-default">
     <div class="panel-body">
-      <schema-view schema="schema"></schema-view>
+      <json-schema-view schema="schema" open="9999"></json-schema-view>
     </div>
   </div>
 </div>
